<resources>
    <string name="app_name">Rajlee Educations</string>
    <string name="welcome_to_rajlee_educations">Welcome To Rajlee Educations</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="don_t_have_account_sign_up">Don\'t have Account? Sign Up</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="email">Email</string>
    <string name="camera_picture">Tap on Camera to choose profile picture</string>
    <string name="name">Your Name</string>
    <string name="save">Save</string>
    <string name="your_profile_picture">Your Profile Picture</string>
    <string name="welcome_to_home_activity">Welcome To Home Activity</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="sub_item1">Text Moode</string>
    <string name="sub_item2">Video Moode</string>
    <string name="item3">MOODE</string>
    <string name="item2">Smart Moode</string>
    <string name="item1">Video Moode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="watch_demo_video">Watch Demo Video</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="coding_and_flow">coding and Flow</string>
    <string name="start_test">Start Test</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="progress">Progress</string>
    <string name="textview">TextView</string>
    <string name="pankaj_kumar">PANKAJ KUMAR</string>
    <string name="forpankaj_prasar_gmail_com">forpankaj.prasar@gmail.com</string>
    <string name="niraj_singh_chauhan">Niraj Singh Chauhan</string>
    <string name="measniraj_gmail_com">measniraj@gmail.com</string>
    <string name="rajlee_education">Rajlee Education</string>
</resources>