<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_marginBottom="18dp"
        android:text="@string/camera_picture"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="236dp"
        android:layout_height="203dp"
        android:layout_above="@+id/etPersonName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="19dp"
        android:contentDescription="@string/your_profile_picture"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_add_a_photo" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="731dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etNumber"
        android:layout_marginBottom="28dp"
        android:autofillHints="Pankaj Kumar"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSave"
        android:layout_marginBottom="40dp"
        android:autofillHints="Pankaj Kumar"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/mobile_number" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="106dp"
        android:paddingLeft="55dp"
        android:paddingRight="55dp"
        android:text="@string/save"
         />
</RelativeLayout>