<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtubeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:videoId="56j33yjIIDg"
        app:autoPlay="true"
        app:showFullScreenButton="true" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/previous" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="-50dp"
        android:text="@string/next" />

    <Button
        android:id="@+id/buttonDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="120dp"
        android:text="@string/watch_demo_video"
        android:textColor="#4CAF50"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>